--- a/src/applications/SvarSed/AddPersonModal/AddPersonModal.module.css
+++ b/src/applications/SvarSed/AddPersonModal/AddPersonModal.module.css
@@ -1,3 +1,3 @@
 .greySpan{
-  color: var(--ax-neutral-600);
+  color: var(--ax-text-neutral-decoration);
 }
