--- a/src/applications/SvarSed/Trygdeordning/DekkedePerioder.module.css
+++ b/src/applications/SvarSed/Trygdeordning/DekkedePerioder.module.css
@@ -1,3 +1,3 @@
 .errorBox{
-  background-color: rgba(255, 0, 0, 0.2);
+  background-color: var(--ax-bg-danger-softA);
 }
