--- a/src/pages/PDU1/PDU1.module.css
+++ b/src/pages/PDU1/PDU1.module.css
@@ -3,5 +3,5 @@
 }
 
 .new{
-  background-color: rgba(236, 243, 153, 0.5);
+  background-color: var(--ax-bg-success-softA);
 }
